fix: Message actions are clickable when not visible

--- a/src/v2/styles/Message/Message-layout.scss
+++ b/src/v2/styles/Message/Message-layout.scss
@@ -96,7 +96,6 @@
 
     .str-chat__message-options {
       grid-area: options;
-      display: flex;
       align-items: center;
       justify-content: flex-end;
       flex-direction: row-reverse;
@@ -225,27 +224,38 @@
 }
 
 .str-chat__message-inner {
-  @mixin visible {
-    // Changing opacity instead of visibility because of a strange Safari behavior/bug
-    opacity: 1;
-    pointer-events: auto;
+  .str-chat__message-options {
+    display: none;
   }
 
-  &:hover .str-chat__message-options {
-    @include visible;
+  &:hover {
+    .str-chat__message-options {
+      display: flex;
+    }
   }
 
   .str-chat__message-edit-in-progress.str-chat__message-options {
-    @include visible;
-  }
-
-  .str-chat__message-options {
-    opacity: 0;
-    pointer-events: none;
+    display: flex;
   }
 }
 
-.str-chat__li--middle,
+.str-chat__message--other .str-chat__message-inner {
+  margin-inline-end: calc(var(--str-chat__message-options-button-size) * 3);
+
+  &:hover {
+    margin-inline-end: 0;
+  }
+}
+
+.str-chat__message--me .str-chat__message-inner {
+  margin-inline-start: calc(var(--str-chat__message-options-button-size) * 3);
+
+  &:hover {
+    margin-inline-start: 0;
+  }
+}
+
+.str-chat__message--own .str-chat__li--middle,
 .str-chat__li--top {
   .str-chat__message {
     margin-block-end: var(--str-chat__spacing-0_5);
